--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
   },
   "homepage": "https://github.com/JMGoebel/ReactAudioDB#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
